--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <a class="list" routerLink="/">Stocks List</a>
+    <button class="list"><a routerLink="/">Stocks List</a></button>
     &nbsp;
-    <a class="add" routerLink="/add">Add stock</a>
+    <button class="add"><a routerLink="/add">Add stock</a></button>
 </header>
