--- a/src/app/components/add-stock/add-stock.component.scss
+++ b/src/app/components/add-stock/add-stock.component.scss
@@ -8,6 +8,9 @@ $borderColor: navy;
 div{
 display: flex;
 justify-content: center;
+//background-image: url("https: //cdn.wallpapersafari.com/58/85/hjPGSd.jpg");
+//background-color: #cccccc;
+//background-image: radial-gradient(rgb(200, 200, 253), navy);
 
 form {
     background-color: $bgColorElement;
@@ -19,6 +22,8 @@ form {
     padding: 5px;
     border-radius: 4px;
     width: 20%;
+    border: 2px solid $borderColor;
+    box-shadow: 10px 10px 20px 3px rgba(1, 1, 156, 0.781);
     
     input {
         color: $textColor;
