Show-stock style

--- a/src/app/components/add-stock/add-stock.component.html
+++ b/src/app/components/add-stock/add-stock.component.html
@@ -1,6 +1,4 @@
-<br>
-<br>
-<br>
+<h1>Add new item here</h1>
 <div>
     <form (ngSubmit)="onSubmit(addForm)" #addForm="ngForm">
         <input type="text" name="name" placeholder="company name" ngModel required>
