--- a/src/app/components/add-stock/add-stock.component.html
+++ b/src/app/components/add-stock/add-stock.component.html
@@ -9,7 +9,7 @@
         <br>
         <input type="number" name="previousPrice" placeholder="previous price" ngModel required>
         <br>
-        <input type="text" name="exchange" placeholder="exchange name" ngModel required>
+        <input class="exchange" type="text" name="exchange" placeholder="exchange name" ngModel required>
         <br>
         <select name="favorite" ngModel required>
             <option value="" disabled selected>Like or Not</option>
