--- a/src/app/components/show-stock/show-stock.component.html
+++ b/src/app/components/show-stock/show-stock.component.html
@@ -10,10 +10,10 @@
         <br>
         <input type="number" name="previousPrice" placeholder="previous price" [(ngModel)]="stock.previousPrice" ngModel readonly>
         <br>
-        <input type="text" name="exchange" placeholder="exchange name" [(ngModel)]="stock.exchange" ngModel required>
+        <input class="exchange" type="text" name="exchange" placeholder="exchange name" [(ngModel)]="stock.exchange" ngModel required>
         <br>
         <select name="favorite" [(ngModel)]="stock.favorite" ngModel required>
-            <option value="" disabled selected>Like or Not</option>
+            <option value="" disabled selected>Is favorite</option>
             <option value="false">Not favorite</option>
             <option value="true">Favorite</option>
         </select>
