--- a/src/app/components/show-stock/show-stock.component.scss
+++ b/src/app/components/show-stock/show-stock.component.scss
@@ -17,10 +17,7 @@ h1 {
 div {
     display: flex;
     justify-content: center;
-    //background-image: url("https: //cdn.wallpapersafari.com/58/85/hjPGSd.jpg");
-    //background-color: #cccccc;
-    //background-image: radial-gradient(rgb(200, 200, 253), navy);
-    
+
     form {
         background-color: $bgColorElement;
         display: flex;
@@ -31,8 +28,11 @@ div {
         padding: 5px;
         border-radius: 4px;
         width: 20%;
-        border: 2px solid $borderColor;
-        box-shadow: 10px 10px 20px 3px rgba(1, 1, 156, 0.781);
+        border: 3px solid rgb(220, 223, 252);
+        border-style: inset; 
+        //box-shadow: 10px 10px 20px 3px rgba(1, 1, 156, 0.781);
+        box-shadow: 10px 10px 30px 5px #fff;
+        
         input {
             color: $textColor;
             border: 1px solid $borderColor;
@@ -41,6 +41,10 @@ div {
             padding: 10px 0px 10px 8px;
             font-size: 18px;
             color: $textColor;
+
+            & .exchange{
+                text-transform: capitalize;
+            }
         }
         select {
             color: $textColor;
