--- a/src/app/components/stocks/stocks.component.scss
+++ b/src/app/components/stocks/stocks.component.scss
@@ -1,144 +1,3 @@
-/*div{
-display: flex;
-//justify-content: center;
-//flex-wrap: wrap;
-//flex-direction: column;
-align-items: center;
-
-    h1{
-justify-content: center;
-
-    }
-table {
-    //display: flex;
-    //justify-content: center;
-    table-layout: fixed;
-    //width: 500px;
-    width: 25%;
-    //border-collapse: collapse;
-    //border: 3px solid purple;
-     margin: 0;
-    padding: 0;
-
-
-    tr{
- background-color: #f8f8f8;
- border: 1px solid #ddd;
- padding: .35em;
-        }
-
-        th,
-        td {
-        border: 1px solid #999;
-        padding: 0.5rem;
-        text-align: left;
-         }
-         .link {
-        text-align: center;
-        }
-    }
-
-}
-
-@media screen and (max-width: 600px) {
-    table {
-        border: 0;
-        width: 90%;
-    }
-    caption {
-        font-size: 1.3em;
-    }
-    tr {
-        border-bottom: 3px solid #ddd;
-        display: block;
-        margin-bottom: .625em;
-        width: 100%;
-    }
-    td, th {
-        border-bottom: 1px solid #ddd;
-        display: block;
-        font-size: .8em;
-        //text-align: right;
-        //width: 100%;
-    }
-    td::before {*/
-        /*
-    * aria-label has no advantage, it won't be read inside a table
-    content: attr(aria-label);
-    */
-   /*    content: attr(data-label);
-        float: left;
-        font-weight: bold;
-        text-transform: uppercase;
-    }
-    td:last-child {
-        //border-bottom: 0;
-    }
-}*/
-
-/* general styling */
-
-/*body {
-    font-family: "Open Sans", sans-serif;
-    line-height: 1.25;
-}*/
-/*.cards {
-    display: grid;
-    max-width: 1200px;
-    margin: 10px auto;
-    grid-gap: 1rem;
-
-    .card {
-        margin-bottom: 30px;
-        background-color: white;
-        color: rgb(4, 56, 105);
-        padding: 0.2rem;
-        height: 18rem;
-        display: flex;
-        flex-direction: row;
-        flex-basis: content;
-        margin: 5px;
-        border: 3px solid rgb(206, 13, 109);
-        border-style: inset;
-
-
-        tr {
-    background-color: #f8f8f8;
-    border: 1px solid #ddd;
-    padding: .35em;
-    width: 100%;
-
-    th,
-td {
-    border: 1px solid #999;
-    padding: 0.5rem;
-    text-align: left;
-}
-
-.link {
-    text-align: center;
-
-}
-}
-
-
-        }  
-        button {
-            width: 80px;
-            padding: 10px;
-            text-align: center;
-            margin: 5px;
-            background-color: #ffff;
-            color: rgb(4, 56, 105);
-            cursor: pointer;
-            border: 1px solid rgb(206, 13, 109);
-            border-radius: 8px;
-        }
-        button:hover {
-            background-color: rgb(238, 174, 209);
-            transform: scale(1.05);
-        }
-    }*/
 
 .page {
     max-width: 60em;
@@ -154,7 +13,7 @@ h1{
     color: navy;
 }
 a {
-    color: navy;
+    color: blue;
     font-style: italic;
     font-weight: 600;
 }
@@ -162,7 +21,6 @@ a {
 thead{
     font-weight: 600;
 }
-
 
 table th,
 table td {
@@ -193,7 +51,7 @@ table.display td {
 }
 
 table.responsive-table {
-    box-shadow: 0 1px 10px rgba(1, 1, 156, 0.781);
+    box-shadow: 5px 5px 10px 2px #fff;
 }
 
 @media (max-width: 30em) {
