--- a/src/styles.scss
+++ b/src/styles.scss
@@ -142,9 +142,10 @@ table {
 
 body {
     padding: 0.5rem;
-    background-color: beige;
+    //background-color: beige;
     font-size: 18px;
-    //background-image: url("https://img4.goodfon.com/wallpaper/nbig/0/c9/voda-babochki-bryzgi.jpg");
+    background-image: url("https://img.wallpapersafari.com/desktop/1600/900/16/97/5uAPh0.png");
+    //background-image: radial-gradient(rgb(200, 200, 253), navy);
     background-repeat: no-repeat;
     background-size: cover;
 }
