--- a/src/app/components/add-stock/add-stock.component.scss
+++ b/src/app/components/add-stock/add-stock.component.scss
@@ -23,10 +23,9 @@ form {
     flex-direction: column;
     flex-wrap: wrap;
     gap: 0px;
-    border: 1px dashed white;
     padding: 5px;
     border-radius: 4px;
-    width: 20%;
+    width: 400px;
     border: 3px solid rgb(220, 223, 252);
     border-style: inset;
     //box-shadow: 10px 10px 20px 3px rgba(1, 1, 156, 0.781);
