--- a/src/styles.scss
+++ b/src/styles.scss
@@ -141,8 +141,9 @@ table {
 }
 
 body {
+    height: 100vh;
     padding: 0.5rem;
-    //background-color: beige;
+    //background-color: rgb(220, 223, 252);
     font-size: 18px;
     background-image: url("https://img.wallpapersafari.com/desktop/1600/900/16/97/5uAPh0.png");
     //background-image: radial-gradient(rgb(200, 200, 253), navy);
