Login and register added

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,4 +2,8 @@
     <button class="list"><a routerLink="/">Stocks List</a></button>
     &nbsp;
     <button class="add"><a routerLink="/add">Add stock</a></button>
+    &nbsp;
+    <button class="login"><a routerLink="/login">Login</a></button>
+    &nbsp;
+    <button class="register"><a routerLink="/register">Register</a></button>
 </header>
