--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,5 +149,6 @@ body {
     //background-image: radial-gradient(rgb(200, 200, 253), navy);
     background-repeat: no-repeat;
     background-size: cover;
+    color: white;
 }
 
