--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -5,18 +5,9 @@ $textColor: navy;
 $textColor1:#fff;
 $borderColor: navy;
 
-h1{
+div {
     display: flex;
     justify-content: center;
-    margin: 40px;
-    font-size: 28px;
-    font-weight: 600;
-    color: navy;   
-}
-div{
-display: flex;
-justify-content: center;
-
 form {
     background-color: $bgColorElement;
     display: flex;
@@ -27,9 +18,9 @@ form {
     border-radius: 4px;
     width: 400px;
     border: 3px solid rgb(220, 223, 252);
-    border-style: inset;
-    //box-shadow: 10px 10px 20px 3px rgba(1, 1, 156, 0.781);
+    //border-style: inset; //box-shadow: 10px 10px 20px 3px rgba(1, 1, 156, 0.781);
     box-shadow: 10px 10px 30px 5px #fff;
+    margin-top: 150px;
     
     input {
         color: $textColor;
@@ -37,24 +28,13 @@ form {
         border-radius: 3px;
         line-height: 12px;
         padding: 10px 0px 10px 8px;
-     
-        &.exchange {
-    text-transform: capitalize;
-}
     }
     
-    select {
-    color: $textColor;
-    border: 1px solid $borderColor;
-    border-radius: 3px;
-    padding: 8px 0px 8px 8px;
-    }
-    input:hover,
-    select:hover {
+    input:hover{
         background-color: $bgColorBody;
     }
-    input::placeholder,
-    select {
+
+    input::placeholder {
         font-size: 18px;
         color: $textColor;
     }
@@ -67,10 +47,23 @@ form {
         line-height: 18px;
         padding: 10px 30px;
     }
-     button:hover {
-     background-color: $bgColorBody;
-     color: $textColor;
- }
+    button:hover {
+        background-color: $bgColorBody;
+        color: $textColor;
+    }
+    a {
+        color: blue;
+        padding: 15px 30px;
+        text-align: end;
+        font-size: 20px;
+        font-style: italic;
+        font-weight: 600;
+        text-decoration: underline;
+    }
+    }
+    @media (max-height: 420px) {
+    form {
+        margin-top: 20px;
+    }
 }
 }
-
