--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div>
     <form>
-        <input [(ngModel)]="user.username" placeholder="Username"><br>
-        <input [(ngModel)]="user.password" placeholder="Password" type="password"><br>
+        <input [(ngModel)]="user.username" placeholder="Username" name="username"><br>
+        <input [(ngModel)]="user.password" placeholder="Password" type="password" name="password"><br>
         <button (click)="login()">Login</button>
         <a routerLink="/register">Register</a>
     </form>
