--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -39,8 +39,7 @@ header {
         text-decoration: none;
         color:navy;
     }
-    .add:hover,
-    .list:hover{
+    button:hover{
         background-color: #fff;
     }
 
