--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,4 +6,6 @@
     <button class="login"><a routerLink="/login">Login</a></button>
     &nbsp;
     <button class="register"><a routerLink="/register">Register</a></button>
+    &nbsp;
+    <button class="register" (click)="accessService.logout()">Logout</button>
 </header>
