--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ header {
     //justify-content: flex-start;
     justify-content: center;
     padding: 5px;
-    position: sticky;
+    //position: sticky;
     top: 0;
     z-index: 1;
     background-color: navy;
@@ -14,7 +14,7 @@ header {
 
     button {
         //margin: auto;
-        padding: 0 10px 0 10px;
+        padding: 0 5px 0 5px;
         font-size: 18px;
         font-weight: 700;
         margin-top: 7px;
@@ -25,7 +25,7 @@ header {
         background-color: rgb(200, 200, 253);
         height: 45px;
         border-style: inset;
-        width: 140px;
+        width: 120px;
     }
     .add, 
     .register{
@@ -43,15 +43,17 @@ header {
         background-color: #fff;
     }
 
-
-@media (max-width: 360px) {
+@media (max-width: 420px) {
     button {
-        min-width: 65px;
+        min-width: 50px;
         font-size: 13px;
         padding: 0;
     }
      .login {
-     margin-left: 3%;
+     margin-left: 2%;
+}
+ .register {
+     min-width: 60px;
 }
 }
 }
